# payload-dumper

./: .gitignore  README.md  pyproject.toml
docs/: README.zh-CN.md
src/gui/: main.py  mainwindow.ui  out.json  ui_mainwindow.py
src/payload_dumper/: __init__.py  __main__.py  dumper.py  fix_zipfile.py  http_file.py  update_metadata_pb2.py  update_metadata_pb2.pyi
